# qop-core

./: .gitignore  Cargo.toml  collected_texts.txt
qopredux/src/: main.rs
qopredux/src/qrud/: mod.rs  scale.rs
src/: btns.rs  engine.rs  engineedit.rs  engineplay.rs  intervals.rs  lib.rs  qopedit.rs  qopplay.rs  scale.rs  temperament.rs
src/engine/: _edit.rs  _play.rs
src/engine/_edit/: _dig_inputs.rs  _gut.rs  _holds.rs  _trnsp.rs  _vfc_sets.rs
src/engineedit/: _dig_inputs.rs  _gut.rs  _trnsp.rs  _vfc_sets.rs
src/old_crap_for_reuse/: mod.rs
src/old_crap_for_reuse/lmaosrc/qrud/qr_input/: mod.rs
src/qopedit/: _asserts.rs  _dig_inputs.rs  _gut.rs  _holds.rs  _misc_btns.rs  _set_multi.rs  _trnsp.rs  _vfc_sets.rs  _vfrc_sets.rs  mod.rs  qe_asserts.rs  qe_gut_methods.rs  qe_kcs_methods.rs  qe_misc_btns.rs  qe_newtrait.rs  qe_plk_methods.rs  qe_set_methods.rs  qe_set_multi_methods.rs  qe_trnsp_methods.rs
src/qopedit/_gut/: _fields.rs  _holds.rs  _set_one.rs
src/qopedit/_gut/_set_one/: _holds.rs
src/qopedit/_set_multi/: _fields.rs  _holds.rs  _trnsp.rs
src/qopedit/qe_gut_methods/: gut_field_methods.rs  qe_gut_field_methods.rs
src/qopplay/: mod.rs
src/scale/: equal_temperament.rs  intervals.rs  scale_list.rs  unequal_temperament.rs
src/scale/scale_list/: twelve_tet.rs  unequal_temperament.rs
src/temperament/: intervals.rs
src/temperament/scale_list/: twelve_tet.rs  unequal_temperament.rs
