[package]
name = "qop-core"
version = "0.1.0"
edition = "2024"
authors = ["JazzerThighs <profenjb199@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale_omnibus = "*"
winit = { version = "30.12", features = ["serde"] }
better_default = "1"
serde = { version = "1", features = ["derive"] }
nestify = "0.3"
duplicate = "2"
lazy_static = "*"