[package]
name = "qop-core"
version = "0.1.0"
edition = "2024"
authors = ["JazzerThighs <profenjb199@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale_omnibus = "*"
winit = { version = "*", features = ["serde"] }
better_default = "*"
serde = { version = "*", features = ["derive"] }
nestify = "*"
duplicate = "*"
lazy_static = "*"
